# commander

./: .dockerignore  .env  .env.development  .env.localnet  .env.production  .gitignore  .prettierrc  .yarnrc.yml  CLAUDE.md  README.md  RELEASE_NOTES.md  SHASUMS256  app.config.json  bot.Dockerfile  buildServer.ts  bun.lockb  dev.Dockerfile  dev.ssh_key  dev.ssh_key.pub  docker-compose.yml  eslint.config.ts  fetchCompose.ts  getReleaseNotes.ts  index.html  key  miners.docker-compose.yml  nodejs.Dockerfile  nodejs.workspace.Dockerfile  package.bot.json  package.json  popup-youtube.html  rust-toolchain.toml  syncVersions.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: bitcoin-data.yml  check.yml  docker-bitcoin.yml  docker-bot.yml  publish.yml  test.yml  update-channel.yml
.husky/: pre-commit
.yarn/releases/: yarn-4.9.1.cjs
bidding-calculator/: package.json
bidding-calculator/src/: BiddingCalculator.ts  Mainchain.ts  createBidderParams.ts  index.ts  utils.ts
bot/: AutoBidder.ts  MiningFrames.ts  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
bot/__test__/: BlockSync.test.ts  _network.ts  bot.test.ts
bot/bidding-calculator/: index.ts
bot/src/: AutoBidder.ts  BlockSync.ts  Bot.ts  CohortBidder.ts  CohortBidderHistory.ts  Dockers.ts  History.ts  JsonStore.ts  MiningFrames.ts  Storage.ts  env.d.ts  index.ts  server.ts  storage.ts  utils.ts
calculator/: package.json
calculator/__test__/: createBidderParams.test.ts
calculator/src/: BiddingCalculator.ts  BiddingCalculatorData.ts  BigNumber.ts  ClientWrapper.ts  IBiddingRules.ts  Mainchain.ts  MiningFrames.ts  createBidderParams.ts  index.ts  utils.ts
cli/: README.md  package.json  tsconfig.json  tsup.config.ts
cli/__test__/: keyringStore.test.ts
cli/src/: accountCli.ts  bitcoinCli.ts  cli.ts  env.ts  index.ts  keyringStore.ts  liquidityCli.ts  miningCli.ts  treasuryCli.ts  vaultCli.ts
core/: README.md  app.config.json  network.config.json  package.json  tsconfig.json  vitest.config.ts
core/__test__/: Accountset.test.ts  CohortBidder.test.ts  StorageFinder.test.ts  createBidderParams.test.ts  startArgonTestNetwork.ts
core/src/: AccountMiners.ts  Accountset.ts  AppConfig.ts  BidPool.ts  BiddingCalculator.ts  BiddingCalculatorData.ts  BlockWatch.ts  ClientWrapper.ts  CohortBidder.ts  FrameIterator.ts  IBidderParams.ts  IBiddingRules.ts  Mainchain.ts  MainchainClients.ts  Mining.ts  MiningBids.ts  MiningFrames.ts  NetworkConfig.ts  PriceIndex.ts  StorageFinder.ts  TransactionFees.ts  TreasuryPool.ts  VaultMonitor.ts  createBidderParams.ts  index.ts  utils.ts
data-generators/: _globals.ts  all.ts  fetchBitcoinFees.ts  fetchBitcoinPrices.ts  fetchVaultRevenue.ts  tsconfig.json
deploy/: .env  .env.mainnet  .env.testnet  .gitignore  docker-compose.yaml
deploy/argon-miner/: Dockerfile  iscomplete.sh  latestblock.sh  latestblocks.sh  syncstatus.sh
deploy/bitcoin/: Dockerfile  bitcoin-regtest.conf  bitcoin.conf  latestblock.sh  latestblocks.sh  syncstatus.sh
deploy/bitcoin-data/: Dockerfile
deploy/bot/: Dockerfile  package.json
e2e/: README.md  lima.yaml  package.json  test-from-lima.sh  tsconfig.json  wdio.conf.ts
e2e/argon/: .env  download.ts  index.ts  miners.docker-compose.yml  miners.workspace.docker-compose.yml  updateConfig.ts
local-machine/: Dockerfile  docker-compose.yml  entrypoint.sh
resources/: README.md  server-0.1.0-rc1.sha256
scripts/: buildServer.ts  checkPrecommit.ts  create_shasum.sh  getReleaseNotes.ts  get_bot_http.sh  helpers.sh  install_server.sh  installer.sh  syncVersions.ts  updateAppConfigs.ts  updateNetworkConfigs.ts  update_shasums.sh  wipeclean.sh
server/: .dockerignore  .env.dev-docker  .env.localnet  .env.mainnet  .env.testnet  .gitignore  README.md  docker-compose.yaml
src/: App.vue  main.css  main.ts
src-tauri/: Cargo.toml  build.rs  setup-script.sh  tauri.conf.experimental.json  tauri.conf.json  tauri.experimental.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon copy.icns  icon.icns
src-tauri/macros/: Cargo.toml
src-tauri/macros/src/: lib.rs
src-tauri/migrations/01-bootup/: up.sql
src-tauri/migrations/02-lockprice/: up.sql
src-tauri/src/: env.rs  lib.rs  main.rs  menu.rs  migrations.rs  security.rs  ssh.rs  ssh_pool.rs  ssh_singleton.rs  utils.rs  vm.rs
src-tauri/src/account/: mod.rs
src-tauri/src/bidder/: mod.rs  stats.rs
src-tauri/src/bidder_stats/: mod.rs
src-tauri/src/config/: base.rs  bidding_rules.rs  install_status.rs  mnemonics.rs  mod.rs  security.rs  server_connection.rs  server_details.rs  server_progress.rs  server_status.rs
src-tauri/src/db/: argon_activities.rs  argon_activity.rs  base.json  bitcoin_activities.rs  bitcoin_activity.rs  bot_activities.rs  bot_activity.rs  cohort_accounts.rs  cohort_frames.rs  cohorts.rs  frames.rs  mod.rs  serverAccount.json
src-tauri/src/db-sql/: account_snapshots.sql  argon_activities.sql  argon_activity.sql  argon_progressions.sql  bitcoin_activities.sql  bitcoin_activity.sql  bitcoin_progressions.sql  bot_activities.sql  bot_activity.sql  bot_progressions.sql  cohort_accounts.sql  cohort_frames.sql  cohort_snapshots.sql  cohorts.sql  frames.sql
src-tauri/src/installer/: mod.rs  status.rs
src-tauri/src/provisioner/: mod.rs
src-tauri/src/server/: mod.rs
src-tauri/src/ssh/: mod.rs  singleton.rs
src-tauri/src/stats/: fetcher.rs  mod.rs  structs.rs  sync.rs  syncer.rs
src-tauri/src/utils/: mod.rs
src-vue/: App.vue  main.css  main.ts  menuStart.ts  vite-env.d.ts
(+418 files in other folders)
