[package]
name = "Commander"
version = "0.1.0"
description = "Desktop management app for Argon"
authors = ["Caleb Clark", "Blake Byrnes"]
edition = "2021"

[workspace.metadata.tauri]
bundle.identifier = "com.argon.commander.app"
bundle.name = "Argon Commander"   # This is used as CFBundleName
bundle.short_name = "Argon Commander"     # Optional, but can affect UI display

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cargo-clippy = []

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "argon_commander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2.2.0"
russh = "0.52.1"
tokio = "1.43.0"
async-trait = "0.1.86"
window-vibrancy = "0.6.0"
rand = "0.8"
dirs = "6.0.0"
semver = "1.0.26"
dotenv = "0.15"
rusqlite = { version = "0.35.0", features = ["bundled", "bundled-sqlcipher-vendored-openssl"] }
lazy_static = "1.4.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-log = { version = "2", features = ["colored" ] }
keyring = {version = "3", features = ["apple-native", "windows-native"] }
hex = "0.4.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
