[package]
name = "Commander"
version = "0.1.0"
description = "Desktop management app for Argon"
authors = ["Caleb Clark", "Blake Byrnes"]
edition = "2024"
build = "build.rs"

[workspace.package]
version = "1.1.0"
edition = "2024"

[workspace]
members = []

[workspace.metadata.tauri]
bundle.identifier = "com.argon.commander"
bundle.name = "Argon Commander"   # This is used as CFBundleName
bundle.short_name = "Argon Commander"     # Optional, but can affect UI display

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cargo-clippy = []

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "argon_commander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"


[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
nosleep = "0.2.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri-plugin-os = "2.2.0"
russh = "0.54.1"
tokio = "1.43.0"
window-vibrancy = "0.6.0"
rand = "0.8"
color-backtrace = "0.7.0"
include_dir = "0.7"
lazy_static = "1.4.0"
anyhow = "1.0"
tauri-plugin-log = { version = "2", features = ["colored" ] }
keyring = {version = "3", features = ["apple-native", "windows-native"] }
hex = "0.4.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
bip39 = "2.2.0"
zip = { version="4.4.0",features= ["time"] }
time = { version = "0.3", default-features = false }
walkdir = "2.5.0"
dotenvy = "0.15"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
